Bug 179567. Cannot dismiss menu by clicking on menu bar. r=pinkerton, sr=bryner